css/main.css
body, html {
  height: 100%;
  font-family: 'Open Sans', sans-serif;
}

#header {
  min-height: 100vh;
  background-color: white;
  color: #292929;
  text-align: center;
  padding: 5%;
  padding-bottom: 0px;
  background-image: url(/images/joanna-kosinska-129039.jpg);
  background-repeat: no-repeat;
}

#header h1 {
  font-size: 70pt;
  margin-bottom: 2%;
  font-weight: 400;
}

#header a {
  border-color: #292929;
  border-width: 5px;
  color: #292929;
  width: 200px;
  height: 100px;
  font-weight: bold;
  transition-duration: 1s;
  margin: 2%;
  background-color: rgba(18, 176, 115, 0);
}

#header a:hover {
  background-color: #292929;
  color: white;
  transition-duration: 1s;
}

#header img {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

#sectiontwo {
  height: 120vh;
  display: table;
}

.smallContainer {
  width: 100%;
  padding: 10%;
}

#vcenter {
  display: table-cell;
  vertical-align: middle;
}

.vcenter {
  display: table-cell;
  vertical-align: middle;
}

#sectiontwo h1 {
  text-align: center;
  color: white;
  font-size: 40pt;
  font-weight: 700;
}

#sectiontwo p {
  text-align: left;
  color: white;
  font-size: 20pt;
  font-weight: 500;
}

#sectionthree {
  height: 100vh;
  background-color: white;
  color: #292929;
  padding-right: 5%;
}

#sectionthree h1 {
  font-weight: 500;
  text-align: center;
  font-size: 50pt;
}

#sectionthree h2 {
  font-weight: 700;
  text-align: left;
  font-size: 50pt;
}

#sectionthree .column {
  height: 70vh;
  display: table;
  padding: 3%;
  text-align: left;
}

#sectionthree p {
  font-size: 20pt;
  color: #4a4a4a;
  max-width: 600px;
}

#sectionthree .columns {
  padding: 5%;
}

#column1 {
  text-align: left;
  border-right-color: rgb(235, 189, 66);
  border-right-style: solid;
  border-right-width: 2px;
}

#column2 {
  margin-right: 5%;
}

#sectionfour {
  background-color: white;
  color: #292929;
  padding: 5%;
}

#sectionfour .container {
  display: table;
}

#sectionfour h1 {
  font-weight: 500;
  text-align: center;
  font-size: 50pt;
}

#sectionfour h2 {
  font-weight: 700;
  text-align: center;
  font-size: 30pt;
  display: inline;
}

#sectionfour p {
  font-size: 20pt;
  color: #4a4a4a;
}

#sectionfour .dollar {
  display: block!important;
  margin-left: auto;
  margin-right: auto;
  width: 30%;
  height: 400px;
}

#sectionfour h3 {
  color: rgb(235, 189, 66);
  font-size: 200pt;
  text-align: center;
}

#sectionfour a {
  border-color: rgb(235, 189, 66);
  border-width: 5px;
  color: rgb(235, 189, 66);
  width: 400px;
  height: 100px;
  font-size: 30pt;
  font-weight: bold;
  display: block;
  transition-duration: 1s;
  margin-left: auto;
  margin-right: auto;
}

#sectionfour a:hover {
  background-color: rgb(235, 189, 66);
  color: white;
  transition-duration: 1s;
}

footer {}

.noLine {
  text-decoration: none;
}

.graphite {
  background-color: #292929;
  color: white;
}

.editor {
  background-color: #292929;
}

.white {
  background-color: white;
}

.full-white {
  background-color: white;
  color: #292929;
}

.navtext:hover, .navtext:active {
  color: white !important;
}

.navtext {
  font-weight: bold;
}

.row {
  display: flex;
  flex-direction: row;
}

.flex-container {
  width: 100%;
  float: right;
  position: absolute;
  display: flex;
  justify-content: flex-end;
}

#editor {
  min-height: 100vh;
  width: 90%;
  word-wrap: break-word;
}

#editorContainer {
  width: 90%;
  margin-left: auto;
  margin-right: auto;
}

.center {
  display: flex;
  align-items: center;
  align-content: center;
  justify-content: center;
}

